Update Talta and the CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,9 +81,9 @@ jobs:
       targetPath: "$(Build.ArtifactStagingDirectory)/altac-$(Alta.Commit)-linux-arch64.tar.xz"
   - task: PublishPipelineArtifact@1
     condition: not(eq(variables['Build.SourceBranch'], 'refs/heads/release'))
-    displayName: "Publish the tar.xz package (debug)"
+    displayName: "Publish the zip package (debug)"
     inputs:
-      artifactName: "altac-linux-amd64-tar-xz"
+      artifactName: "altac-linux-amd64-zip"
       targetPath: "$(Build.ArtifactStagingDirectory)/altac-$(Alta.Commit)-linux-arch64.zip"
   # release
   - task: PublishPipelineArtifact@1
@@ -112,17 +112,12 @@ jobs:
       targetPath: "$(Build.ArtifactStagingDirectory)/release/altac-$(Alta.Version)-linux-arch64.tar.xz"
   - task: PublishPipelineArtifact@1
     condition: eq(variables['Build.SourceBranch'], 'refs/heads/release')
-    displayName: "Publish the tar.xz package (release)"
+    displayName: "Publish the zip package (release)"
     inputs:
-      artifactName: "altac-linux-amd64-tar-xz"
+      artifactName: "altac-linux-amd64-tar-zip"
       targetPath: "$(Build.ArtifactStagingDirectory)/release/altac-$(Alta.Version)-linux-arch64.zip"
 
   # upload it to sourceforge
-  - task: SSH@0
-    displayName: "Create the upload directories on SourceForge"
-    inputs:
-      sshEndpoint: 'SourceForge Upload'
-      commands: 'mkdir -p /home/frs/project/alta-builds/automated/$(Alta.Commit); mkdir -p /home/frs/project/alta-builds/release/$(Alta.Version)'
   # automated
   - task: CopyFilesOverSSH@0
     displayName: "Upload the artifacts to SourceForge (automated)"
@@ -230,11 +225,6 @@ jobs:
       targetPath: "$(Build.ArtifactStagingDirectory)/release/altac-$(Alta.Version)-windows-arch64.zip"
 
   # upload it to sourceforge
-  - task: SSH@0
-    displayName: "Create the upload directories on SourceForge"
-    inputs:
-      sshEndpoint: 'SourceForge Upload'
-      commands: 'mkdir -p /home/frs/project/alta-builds/automated/$(Alta.Commit); mkdir -p /home/frs/project/alta-builds/release/$(Alta.Version)'
   # automated
   - task: CopyFilesOverSSH@0
     displayName: "Upload the artifacts to SourceForge (automated)"
@@ -328,11 +318,6 @@ jobs:
       targetPath: "$(Build.ArtifactStagingDirectory)/release/altac-$(Alta.Version)-macos-arch64.zip"
 
   # upload it to sourceforge
-  - task: SSH@0
-    displayName: "Create the upload directories on SourceForge"
-    inputs:
-      sshEndpoint: 'SourceForge Upload'
-      commands: 'mkdir -p /home/frs/project/alta-builds/automated/$(Alta.Commit); mkdir -p /home/frs/project/alta-builds/release/$(Alta.Version)'
   # automated
   - task: CopyFilesOverSSH@0
     displayName: "Upload the artifacts to SourceForge (automated)"
