Update Talta and add new examples

--- a/examples/package.alta.yaml
+++ b/examples/package.alta.yaml
@@ -16,3 +16,9 @@ targets:
 - name: read-file
   main: read-file.alta
   type: exe
+- name: tcp-server
+  main: tcp-server.alta
+  type: exe
+- name: tcp-client
+  main: tcp-client.alta
+  type: exe
