--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pest = "2.1.3"
+pest_derive = "2.1.0"
+llvm-sys = "110.0.0"
+sum_type = "0.2.0"
+bitflags = "1.2.1"
